--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/myweb?serverTimezone=Asia/Shanghai&characterEncoding=utf-8
     username: root
-    password: FB20020910
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
